# gnome_wars

./: README.md  logging_config.py  pre-push  pyproject.toml
.github/workflows/: python-app.yml
assets/tilemaps/: 3.tsx  4.tsx  path.tsx  test tileset.tsx  test.tiled-session  tileset2.tsx
gnome_wars/: main.py  math.py
tests/: test_math.py  test_movement_processor.py
