[tool.poetry]
name = "gnome-wars"
version = "0.1.0"
description = ""
authors = ["sbw <stephenbrodiewild@gmail.com>"]
readme = "README.md"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gnome-wars = "gnome_wars.main:main"